2010-07-22 Erwann Chenede - <erwann.chenede@sun.com>

  * gtk-engine/nimbus_style.c: fix for 15409 (Bartosz Kwitniewski)

2009-10-09 Erwann Chenede - <erwann.chenede@sun.com>

  * configure.in: new release 0.1.4

2009-10-07 Erwann Chenede - <erwann.chenede@sun.com>

  * gtk-engine/nimbus_style.c: fix for 6744700 (firefox default button)

2009-10-07 Erwann Chenede - <erwann.chenede@sun.com>

  * gtk-engine/nimbus_style.c: fix for 6880869 (firefox scroll)

2009-10-06 Erwann Chenede - <erwann.chenede@sun.com>

  * gtk-engine/gtk-2.0/*gtkrc : fix 6684201 (gedit tab)

2009-09-07 Erwann Chenede - <erwann.chenede@sun.com>

  * configure.in
  * gtk-engine/nimbus_style.c : make nimbus compile cleanly under mingw
    patch by Alexander Shaduri

2009-08-28 Erwann Chenede - <erwann.chenede@sun.com>

  * icons/* : added new nwam icons (doo 10942)

2009-03-11 Erwann Chenede - <erwann.chenede@sun.com>

  fix for 1621
  * icons/48x48/places/start-here.png: 48x48 version of the OpenSolaris
    logo
  * icons/48x48/places/Makefile.am : added new icon
  * configure.in : bump version

2009-02-04 Erwann Chenede - <erwann.chenede@sun.com>

  initial implementation of light-nimbus theme.

  * metacity/light-metacity-theme-1.xml : new theme variation 
  * metacity/Makefile.am
  * light-index.theme.in
  * configure.in : bumped to 0.1.2
  * gtk-engine/gtk-2.0/light-gtkrc
  * gtk-engine/gtk-2.0/Makefile.am
  * gtk-engine/nimbus_rc_style.c : added light_theme token and new colors
  * gtk-engine/nimbus_rc_style.h
  * gtk-engine/nimbus_style.c : added light theme switch
  * Makefile.am
  * specs/light/WindowFrame.jpg : designer images and specs
  * specs/light/WindowFrame-Spec2.jpg :
  * specs/light/WindowFrame-Spec1b.jpg

2008-10-15 Erwann Chenede - <erwann.chenede@sun.com>

  * gtk-engine/nimbus_rc_style.c: removed reference to gdk_display_get_default 
    as gtk now initializes it after the theme engine is loaded. fixes 6758256
    Also revert to previous vline color.