@@ -16,7 +16,7 @@ icons_DATA = 				 		\
 		gnome-fs-ssh.png 		\
 		network-server.png 		\
 		network-workgroup.png 		\
-		start-here.png			\
+		start-here.png 		\
 		user-desktop.png 		\
 		user-home.png 		\
 		user-trash-full.png 		\
